fixed spacing in modal

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -206,3 +206,7 @@ body .navbar {
 #jumbotron-wrapper .jumbotron {
     background-color: transparent;
 }
+
+.modal-content .modal-body .row {
+    padding: 5px 10px;
+}
